changed color for link to repo

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
         <footer>
             <h2 class="foot-heading">Made with ❤️ by Sahil Bairagi.</h2>
-            <div class="copyright">Are you a developer and want to contribute? <a href='https://github.com/Sahil-k1509/ResumeMaker' style='text-decoration:none; color: light-blue;'>Visit Here</a></div>
+            <div class="copyright">Are you a developer and want to contribute? <a href='https://github.com/Sahil-k1509/ResumeMaker' style='text-decoration:none; color: rgb(100, 170, 255);'>Visit Here</a></div>
 
             <div class="social-med">
                 <div class="soc-logo"><a href='https://www.facebook.com/profile.php?id=100039444023014' target='_blank' class="fa fa-facebook-square"></a></div>
