added loading and info classes to body.
classes were removed for debugging the page and put back to normal state now

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         };
     </script>
 </head>
-<body>
-    <!-- class='active-info loading' -->
+<body class='active-info loading' >
 
     <div class='preloader'>
         <div class='load-line line-1'></div>
